infra/k8s/product-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-api
  template:
    metadata:
      labels:
        app: product-api
    spec:
      containers:
        - name: product-api
          image: product_api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: product-api
  namespace: apps
spec:
  selector:
    app: product-api
  ports:
    - port: 80
      targetPort: 8080
